fix ticket wrapping td if item is too long - Trello: 32U0A5OM

--- a/app/public/css/cbv-pos.css
+++ b/app/public/css/cbv-pos.css
@@ -322,7 +322,7 @@ td.print_hide {
 }
 
 .ticket-specs {
-	font-size: 20px;
+	font-size: 18px;
 }
 
 .ticket-cbvid {
